--- a/cjevent05/pom.xml
+++ b/cjevent05/pom.xml
@@ -150,7 +150,14 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.2.2</version>
-		</dependency>       
+		</dependency>
+		
+		<!-- Base64 Encoding -->
+		<dependency>
+    		<groupId>commons-codec</groupId>
+    		<artifactId>commons-codec</artifactId>
+    	<version>1.6</version>
+</dependency>      
 		 
 	</dependencies>
     <build>
