--- a/cjevent05/pom.xml
+++ b/cjevent05/pom.xml
@@ -125,7 +125,11 @@
 		</dependency>
 		
         <!-- MSSQL -->
-     
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
+		</dependency>
         
         <!-- Spring JDBC -->		
 		<dependency>
